[workspace]
resolver = "2"
members = [
    "ser-hex",
    "ser-hex-viewer",
]

[workspace.package]
repository = "https://github.com/trumank/ser-hex"
authors = ["trumank"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
serde_json = "1.0.108"
