[package]
name = "ser-hex-viewer"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
eframe = "0.24.1"
egui_memory_editor = { git = "https://github.com/trumank/egui_memory_editor" }
intervaltree = "0.2.7"
ser-hex = { path = "../ser-hex" }
serde_json.workspace = true
