[package]
name = "ser-hex"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-core = { version = "0.1.32", default-features = false }
anyhow.workspace = true
serde_json.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
byteorder = "1.5.0"
